[#959] Memberimage overlapping and heading fixed

--- a/app/MyApp/app/tabl.css
+++ b/app/MyApp/app/tabl.css
@@ -193,8 +193,8 @@ bbf-form ul{border: 5px solid;}
     color:red;
 }
 .signup-submit {
-    margin-top: -4px;
     margin-left: 0px;
+    margin-top:77px;
     text-align: auto;
 }
 .signup-btn.btn {
